[package]
name = "subconv"
description = "Subtitle tool to convert and shift SRTs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/mrnossiom/subconv"
license = "MIT"
readme = "./README.md"
keywords = ["srt", "iconv", "shift"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
eyre = "0.6.8"
iconv = "0.1.1"
label-logger = { version = "0.2.0" }
nom = "7.1.3"
uchardet = "2.0.4"

[lints]
[lints.rust]
unsafe_code = "deny"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

missing_docs_in_private_items = "warn"
print_literal = "warn"
redundant_pub_crate = "allow"
unwrap_used = "warn"
[lints.rustdoc]
broken_intra_doc_links = "warn"
