[package]
name = "subconv"
version = "0.1.0"
edition = "2021"

description = "Easily convert and transform subtitle files"
authors = ["Milo Moisson <milomoisson@gmail.com>"]
repository = "https://github.com/mrnossiom/subconv"
keywords = ["subtitle", "srt", "iconv", "shift"]
categories = ["command-line-utilities"]
license = "CECILL-2.1"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
eyre = "0.6.8"
iconv = "0.1.1"
label-logger = { version = "0.2.0" }
nom = "7.1.3"
uchardet = "2.0.4"

[lints]
[lints.rust]
unsafe_code = "deny"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# cargo = { level = "warn", priority = -1 }

missing_docs_in_private_items = "warn"
print_literal = "warn"
unwrap_used = "warn"
[lints.rustdoc]
broken_intra_doc_links = "warn"
